--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>4.2.0-SNAPSHOT</cdap.version>
+    <cdap.version>4.1.1</cdap.version>
     <hydrator.version>1.6.1</hydrator.version>
     <spark.version>1.6.1</spark.version>
     <widgets.dir>widgets</widgets.dir>
@@ -66,7 +66,7 @@
     <kafka.version>0.8.2.2</kafka.version>
     <hadoop.version>2.3.0</hadoop.version>
     <!-- properties for script build step that creates the config files for the artifacts -->
-    <app.parents>system:cdap-data-streams[4.2.0-SNAPSHOT,5.0.0),system:cdap-data-pipeline[4.2.0-SNAPSHOT,5.0.0)</app.parents>
+    <app.parents>system:cdap-data-streams[4.1.0-SNAPSHOT,5.0.0),system:cdap-data-pipeline[4.1.0-SNAPSHOT,5.0.0)</app.parents>
     <main.basedir>${project.basedir}</main.basedir>
   </properties>
 
@@ -118,6 +118,11 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-csv</artifactId>
       <version>1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.avro</groupId>
+      <artifactId>avro</artifactId>
+      <version>1.8.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.hadoop</groupId>
@@ -322,7 +327,7 @@
           <extensions>true</extensions>
           <configuration>
             <instructions>
-              <_exportcontents>co.cask.hydrator.plugin.*;org.apache.spark.streaming.kafka.*;
+              <_exportcontents>org.apache.avro.*;com.google.common.*;co.cask.*;org.apache.spark.streaming.kafka.*;
                 kafka.serializer.*;kafka.common</_exportcontents>
               <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
               <Embed-Transitive>true</Embed-Transitive>
