--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>co.cask.hydrator</groupId>
   <artifactId>kafka-plugins</artifactId>
-  <version>1.7.0-SNAPSHOT-0.8.2.2</version>
+  <version>1.7.3-0.8.2.2</version>
 
   <licenses>
     <license>
@@ -58,8 +58,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cdap.version>4.2.0-SNAPSHOT</cdap.version>
-    <hydrator.version>1.6.1</hydrator.version>
+    <cdap.version>4.2.0</cdap.version>
+    <hydrator.version>1.7.0</hydrator.version>
     <spark.version>1.6.1</spark.version>
     <widgets.dir>widgets</widgets.dir>
     <docs.dir>docs</docs.dir>
