Fixing issue CDAP-12187 by using cdap-common code to extract binary payload from java nio's ByteBuffer Cask Ops 7/25/17 9:40 AM

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <version>${cdap.version}</version>
     </dependency>
     <dependency>
+        <groupId>co.cask.cdap</groupId>
+        <artifactId>cdap-common</artifactId>
+        <version>${cdap.version}</version>
+    </dependency>
+    <dependency>
       <groupId>co.cask.cdap</groupId>
       <artifactId>cdap-formats</artifactId>
       <version>${cdap.version}</version>
