--- a/kafka-plugins-0.9/pom.xml
+++ b/kafka-plugins-0.9/pom.xml
@@ -5,13 +5,13 @@
   <parent>
     <artifactId>kafka-plugins</artifactId>
     <groupId>co.cask.hydrator</groupId>
-    <version>1.8.1</version>
+    <version>1.8.2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <name>Apache Kafka 0.9 plugins</name>
   <artifactId>kafka-plugins</artifactId>
-  <version>1.8.1-0.9.0.1</version>
+  <version>1.8.2-SNAPSHOT-0.9.0.1</version>
 
   <dependencies>
     <dependency>
