--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
   <groupId>co.cask.hydrator</groupId>
   <artifactId>kafka-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>1.8.1</version>
+  <version>1.8.2-SNAPSHOT</version>
 
   <licenses>
     <license>
