--- a/kafka-plugins-0.8/pom.xml
+++ b/kafka-plugins-0.8/pom.xml
@@ -124,7 +124,7 @@
         <configuration>
           <instructions>
             <_exportcontents>co.cask.hydrator.plugin.*;org.apache.spark.streaming.kafka.*;
-              kafka.serializer.*;kafka.common;</_exportcontents>
+              kafka.serializer.*;kafka.common;com.google.common.base.*;</_exportcontents>
             <Embed-Dependency>*;inline=false;scope=compile</Embed-Dependency>
             <Embed-Transitive>true</Embed-Transitive>
             <Embed-Directory>lib</Embed-Directory>
